--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -38,13 +38,13 @@
         [view]="view"
         [(viewDate)]="viewDate"
         (viewDateChange)="activeDayIsOpen = false">
-        <p><</p>
+        <p class="arrow"> < </p>
       </button>
       <div
         class="btn btn-primary"
         mwlCalendarToday
         [(viewDate)]="viewDate">
-        Now
+        Today
       </div>
       <div
         class="btn btn-primary "
@@ -52,7 +52,7 @@
         [view]="view"
         [(viewDate)]="viewDate"
         (viewDateChange)="activeDayIsOpen = false">
-        <p> > </p>
+        <p class="arrow"> > </p>
       </div>
     </div>
   </div>
@@ -112,3 +112,11 @@
   </mwl-calendar-day-view>
 </div>
 </div>
+
+<style type="text/css">
+  .arrow{
+  font-size:25px;
+  margin-bottom: 30px;
+  align-items: center;
+}
+</style>
