--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -82,6 +82,20 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+
+    <img src="../assets/img/blue.png" style="height:15px;width: 15px;"><p> Systers 2018 calendar </p>
+  </div>
+  <div class="rr" style="margin: 7px;">
+  </div>
+  <div class="row">
+    <img src="../assets/img/red.png" style="height: 15px; width: 15px;"> <p> GSoC 18 calendar </p>
+  </div>
+    <div class="rr" style="margin: 7px;">
+  </div>
+  <p> (Please click on the date tab to know more about the events)
+</div>
 <br>
 <div [ngSwitch]="view">
   <mwl-calendar-month-view
